# mcdk-assistant

./: .gitignore  CMakeLists.txt  CMakePresets.json  GameAssetsFormat.py  README.md
knowledge/BedrockWiki/blocks/: block-permutations.md
knowledge/BedrockWiki/items/: item-components.md
knowledge/GameAssets/behavior_packs/chemistry/: contents.json  netease_config.json
knowledge/GameAssets/behavior_packs/education/: contents.json  manifest.json  netease_config.json
knowledge/GameAssets/behavior_packs/netease/: contents.json  manifest.json  netease_config.json
knowledge/GameAssets/behavior_packs/test_vanilla_1.11/: netease_config.json
knowledge/GameAssets/behavior_packs/test_vanilla_1.12/: contents.json  netease_config.json
knowledge/GameAssets/behavior_packs/vanilla/: contents.json  manifest.json  manifest_publish.json  netease_config.json
knowledge/GameAssets/behavior_packs/vanilla_edu_gametest/: contents.json  manifest.json
knowledge/GameAssets/behavior_packs/vanilla_experimental/: contents.json  manifest.json  netease_config.json
knowledge/GameAssets/behavior_packs/vanilla_gametest_alpha/: contents.json  manifest.json
knowledge/GameAssets/behavior_packs/vanilla_gametest_beta/: contents.json  manifest.json
knowledge/GameAssets/behavior_packs/vanilla_gametest_v1/: contents.json  manifest.json
knowledge/GameAssets/behavior_packs/warsaw_gametest/: contents.json  manifest.json
knowledge/GameAssets/resource_packs/chemistry/: blocks.json  contents.json  netease_config.json  sounds.json
knowledge/GameAssets/resource_packs/education/: blocks.json  contents.json  loading_messages.json  manifest.json  netease_config.json  splashes.json
knowledge/GameAssets/resource_packs/oreui/: contents.json  manifest.json
knowledge/GameAssets/resource_packs/persona/: contents.json  manifest.json  netease_config.json
knowledge/GameAssets/resource_packs/skins/: contents.json  manifest.json  netease_config.json
knowledge/GameAssets/resource_packs/vanilla/: biomes_client.json  blocks.json  contents.json  loading_messages.json  manifest.json  manifest_publish.json  netease_config.json  sounds.json  splashes.json
knowledge/GameAssets/resource_packs/vanilla_base/: contents.json  manifest.json  netease_config.json
knowledge/GameAssets/resource_packs/vanilla_login/: contents.json  manifest.json  netease_config.json
knowledge/GameAssets/resource_packs/vanilla_music/: contents.json  manifest.json
knowledge/GameAssets/resource_packs/vanilla_netease/: manifest.json  netease_config.json
knowledge/GameAssets/resource_packs/vanilla_trial/: contents.json  manifest.json
knowledge/ModAPI/beta/更新信息/: 3.7.md
knowledge/ModAPI/事件/: UI.md  世界.md  事件索引表.md  实体.md  控制.md  方块.md  模型.md  游戏设置.md  物品.md  物理.md  玩家.md  联机大厅.md  音效.md
knowledge/ModAPI/接口/: Api索引表.md  原生UI.md  商城.md  山头服务器.md  成就.md  控制.md  模型.md  渲染.md  游戏设置.md  物品.md  物理.md  联机大厅.md  音效.md
knowledge/ModAPI/接口/世界/: 地图.md  天气.md  实体管理.md  指令.md  方块管理.md  方块组合.md  时间.md  消息.md  渲染.md  游戏规则.md  生物生成.md  索引.md  行为.md  记分板.md  配方.md
knowledge/ModAPI/接口/后处理/: 模糊.md  渐晕.md  索引.md  自定义.md  色彩.md  镜头效果.md
knowledge/ModAPI/接口/实体/: molang.md  官方伙伴.md  官方聊天扩展.md  实体类型.md  属性.md  抛射物.md  标签.md  渲染.md  状态效果.md  索引.md  经验球.md  背包.md  自定义属性.md  自定义数据.md  行为.md  附加值.md  魔法指令.md
knowledge/ModAPI/接口/方块/: 告示牌.md  容器.md  (+9 more)
knowledge/ModAPI/枚举值/: ActorDamageCause.md  AniCheatBlockBreak.md  AniCheatConsts.md  AniCheatMove.md  AniCheatMoveRewind.md  AnimationModeType.md  ArmorSlotType.md  AttrType.md  AttributeBuffType.md  BiomeType.md  BlockBreathability.md  BrewingStandSlotType.md  ButtonEventType.md  ButtonState.md  CatVariantType.md  Change.md  ColorCode.md  CommandBlockType.md  ConditionType.md  ContainerType.md  EffectType.md  EnchantSlotType.md  EnchantType.md  EntityColorType.md  EntityComponentType.md  EntityTeleportCause.md  EntityType.md  Facing.md  FoxType.md  GameDiffculty.md  GameType.md  GamepadKeyType.md  HorseSpotType.md  HorseType.md  InputMode.md  InventoryType.md  ItemAcquisitionMethod.md  ItemCategory.md  ItemColor.md  ItemPosType.md  (+34 more)
libs/cpp-mcp/: CMakeLists.txt
libs/cpp-mcp/include/: mcp_logger.h  mcp_message.h  mcp_server.h  mcp_tool.h
libs/cpp-mcp/src/: CMakeLists.txt  mcp_server.cpp  mcp_tool.cpp
plans/: differences-tool-design.md  jsonui-mcp-tool-design.md  pixel_art_mcp_plan.md
plans/res/: KID_ULTRAX_CODEX.json  KID_ULTRAX_CODEX_test.json  KID_ULTRAX_CODEX_test.json.bak  netease_editor_template_namespace.json  test_sword.geo.json
skills/ffi-cache/: SKILL.md
skills/hash-key/: SKILL.md
skills/mc-search/: SKILL.md
skills/next-opt/: SKILL.md
skills/py-except/: SKILL.md
skills/py-init/: SKILL.md
src/: main.cpp
src/app/: server_runtime.cpp
src/search/: bm25.h  bm25.hpp  index_cache.hpp  search_service.h  search_service.hpp
src/server/: tool_stats.hpp
src/tools/: canvas_manager.hpp  model_editor.hpp  register_jsonui.hpp  register_model.hpp  register_pixel_art.hpp  register_search.hpp  stb_impl.cpp  ui_diagnoser.cpp  ui_patcher.cpp  ui_patcher.h  ui_templates.cpp
tests/: search_test.cpp  stress_test.py
(+16129 files in other folders)
